Fix pointer events on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -243,6 +243,11 @@ footer {
         background-repeat: no-repeat;
         background-size: cover;
         background-position: 0 0;
+        pointer-events: none;
+    }
+
+    .content {
+        pointer-events: all;
     }
 
     .layer .content {
